package fit.iuh;

public interface JsonService {
  String getJsonData();
}
