package fit.iuh;

public class JsonSystem {
  public String getJsonData() {
    return "{ \"name\": \"Thien Thien\" }";
  }

}
