package fit.iuh;

public interface XmlService {
  String getXmlData();
}
