package fit.iuh;

public class XmlSystem {
  public String getXmlData() {
    return "<user><name>Thien Thien</name></user>";
  }
}
